# -

./: .gitignore  CMakeLists.txt
1/1/: main.cpp  triangle.h
11/: main.cpp
12/: main.cpp
14/1/: main.cpp
14/2/: Array.h
14/3/: Set.h
2/1/: triangle.cpp  triangle.h
2/2/: circle.h
2/3/: figure.h
3/1/: eq.cpp  eq.h  main.cpp
3/2/: main.cpp  rational.cpp  rational.h
3/3/: main.cpp  rational.cpp  rational.h
6/1/: main.cpp
6/2/: cone.h
6/3/: bay.cpp  bay.h  ocean.h  sea.h
7/: sensor.h  type1.h  type2.cpp  type2.h
8/: type3.h  type4.h
9/2/: main.cpp
9/3/: main.cpp  set.cpp  set.h
